--- a/BaseballTour/tripplanner.ui
+++ b/BaseballTour/tripplanner.ui
@@ -333,20 +333,6 @@
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_15">
-        <property name="text">
-         <string>Total Distance Travelled</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_16">
-        <property name="text">
-         <string>Total Amount Spent</string>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_17">
         <property name="text">
@@ -354,10 +340,30 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="startLineEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="placeholderText">
+         <string>Placeholder Stadium</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_18">
         <property name="text">
          <string>Ending Stadium</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="endLineEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="placeholderText">
+         <string>Placeholder Stadium</string>
         </property>
        </widget>
       </item>
@@ -374,23 +380,30 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="startLineEdit">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-        <property name="placeholderText">
-         <string>Placeholder Stadium</string>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_15">
+        <property name="text">
+         <string>Total Distance Travelled</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="endLineEdit">
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="distanceSpinBox">
         <property name="readOnly">
          <bool>true</bool>
         </property>
-        <property name="placeholderText">
-         <string>Placeholder Stadium</string>
+        <property name="buttonSymbols">
+         <enum>QAbstractSpinBox::NoButtons</enum>
+        </property>
+        <property name="maximum">
+         <number>999999999</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_16">
+        <property name="text">
+         <string>Total Amount Spent</string>
         </property>
        </widget>
       </item>
@@ -407,16 +420,6 @@
         </property>
         <property name="maximum">
          <double>9999999999.989999771118164</double>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QSpinBox" name="distanceSpinBox">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-        <property name="buttonSymbols">
-         <enum>QAbstractSpinBox::NoButtons</enum>
         </property>
        </widget>
       </item>
@@ -446,6 +449,19 @@
      </property>
      <property name="text">
       <string>OK</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_19">
+     <property name="geometry">
+      <rect>
+       <x>610</x>
+       <y>480</y>
+       <width>41</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mi</string>
      </property>
     </widget>
    </widget>
